hphp/hack/test/typecheck/legacy/covariance_typedef_decl_bad.php.exp
File "covariance_typedef_decl_bad.php", line 5, characters 18-18:
Illegal usage of a covariant type parameter (Typing[4120])
File "covariance_typedef_decl_bad.php", line 5, characters 9-9:
This is where the parameter was declared as covariant (+)
File "covariance_typedef_decl_bad.php", line 5, characters 18-18:
This position is contravariant (-) because it is the composition of (-)(+)
The rest of the error messages decomposes the inference of the variance.
Check out this link if you don't understand what this is about:
http://en.wikipedia.org/wiki/Covariance_and_contravariance_(computer_science)
File "covariance_typedef_decl_bad.php", line 5, characters 18-18:
(-) This type parameter was declared as contravariant (-) (cf 'Foo')
File "covariance_typedef_decl_bad.php", line 5, characters 14-16:
(+) Aliased types are covariant
