hphp/hack/test/typecheck/legacy/covariance_typedef_decl_bad.php
<?hh

class Foo<-T> {}

type X<+T> = Foo<T>;
